Fix markdown editor toolbar in fullscreen overlapped by navbar

--- a/src/static/css/site.scss
+++ b/src/static/css/site.scss
@@ -33,6 +33,9 @@
 
 
 // Navbar
+body > nav.navbar {
+    z-index: -1;
+}
 .navbar-form {
     margin-right: 0px;
     margin-left: 0px;
